<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <EditTextPreference
        android:key="pref_key_key_sequence"
        android:inputType="number"
        android:title="@string/pref_title_key_sequence"
        android:summary="@string/pref_summary_key_sequence"
        android:defaultValue="41538"
        />
    <EditTextPreference
        android:key="pref_key_duration"
        android:inputType="number"
        android:title="@string/pref_title_duration"
        android:summary="@string/pref_summary_duration"
        android:defaultValue="3000"
        />
    <CheckBoxPreference
        android:key="pref_key_sound"
        android:title="@string/pref_title_sound"
        android:summary="@string/pref_summary_sound"
        android:defaultValue="true"
        />
</PreferenceScreen>